--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,25 +1,16 @@
-unbind r
-bind r source-file ~/.tmux.conf
+# Set tmux prefix to Ctrl-Space
+unbind C-b
+set -g prefix C-Space
+bind Space send-prefix
 
-set -g prefix C-s
+# Vim motions on tmux
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# act like vim
-setw -g mode-keys vi
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'dracula/tmux'
-
-set -g @dracula-show-powerline true
-set -g @dracula-fixed-location "NYC"
-set -g @dracula-plugins "weather"
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
-set -g status-position top
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# Pane resize
+bind -n C-k resize-pane -U 5
+bind -n C-j resize-pane -D 5
+bind -n C-h resize-pane -L 5
+bind -n C-l resize-pane -R 5
